# MMM

./: .gitmodules  CMakeLists.txt  README.md  compile_commands.json  neovim.json
src/: common.h  gui.cpp  gui.h  main.cpp
